# CPP-Projects

./: CMakeLists.txt
app/: CMakeLists.txt  hello.cpp
cmake/: AddGitSubmodule.cmake
configured/: CMakeLists.txt  config.hpp.in
src/: CMakeLists.txt  my_lib.cpp
